--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,13 @@ body {
   letter-spacing: -.003em;
   font-size: 20px;
   padding: 70px;
+  max-width:50rem;
+  margin-left: auto;
+  margin-right:auto
 }
 
 h1 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
   font-size: 38px;
@@ -19,4 +22,66 @@ h1 {
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
   -webkit-font-smoothing: antialiased;
+}
+
+h2 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 32px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
+h3 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
+h4 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 22px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
+button {
+background-color: #FFFFFF; /* Green */
+  border: none;
+  color: white;
+  border: 0;
+  padding: 0;
+
+}
+
+.bottomright {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  font-size: 18px;
 }
