--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,95 @@
 @import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@media (min-width: 320px) and (max-width: 999px) {
+body {
+  font-family: 'Inter', sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 400;
+  line-height: 1.58;
+  letter-spacing: -.003em;
+  font-size: 1.3em;
+  padding: 2.5em;
+  margin-left: auto;
+  margin-right:auto
+}
+
+h1 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+}
+
+h2 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.8em;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
+h3 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.6em;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
+h4 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 1.4em;
+  font-style: normal;
+  font-size: 22px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
+button {
+background-color: #FFFFFF; /* Green */
+  border: none;
+  color: white;
+  border: 0;
+  padding: 0;
+
+}
+
+.bottomright {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
+  display: none !important;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  font-size: 18px;
+}
+}
+
+
+@media (min-width: 1000px) {
 body {
   font-family: 'Inter', sans-serif;
   color: rgba(0, 0, 0, 0.8);
@@ -84,4 +174,5 @@ background-color: #FFFFFF; /* Green */
   bottom: 8px;
   left: 16px;
   font-size: 18px;
+}
 }
