--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ h1 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 38px;
+  font-size: 4vw;
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -29,7 +29,7 @@ h2 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 32px;
+  font-size: 3.3vw;
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -42,7 +42,7 @@ h3 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 26px;
+  font-size: 2.6vw;
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -55,7 +55,7 @@ h4 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 22px;
+  font-size: 2.2vw;
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -76,7 +76,7 @@ button {
   position: absolute;
   bottom: 8px;
   right: 16px;
-  font-size: 18px;
+  font-size: 2vw;
 }
 
 .bottomleft {
@@ -122,7 +122,7 @@ button {
 }
 
 
-@media  (min-width: 1000px) {
+@media  (min-width: 20cm) and (min-width: 1000px){
 
 .bottomright {
   position: absolute;
@@ -139,16 +139,16 @@ button {
 }
 }
 
-@media  (min-width: 380px) and (max-width: 999px)  {
+@media  (min-width: 3cm) and (max-width: 20cm) and (min-width: 400px)  {
   body {
-    font-size: 1.3em;
+    font-size: 3.2vh;
     padding: 2.5em;
     margin-left: auto;
     margin-right: auto;
   }
 
   h1 {
-    font-size: 2em;
+    font-size: 2.0em;
   }
 
   h2 {
@@ -162,7 +162,7 @@ button {
   }
 
   h4 {
-    font-size: 22px;
+    font-size: 1.4em;
     margin-top: 5px;
   }
 
