--- a/styles.css
+++ b/styles.css
@@ -139,9 +139,9 @@ button {
 }
 }
 
-@media (min-width: 400px)  {
+@media (min-width: 400px) and (max-width: 999px)  {
   body {
-    font-size: 3.2vh;
+    font-size: 2.8vh;
     padding: 2.5em;
     margin-left: auto;
     margin-right: auto;
