--- a/styles.css
+++ b/styles.css
@@ -180,18 +180,20 @@ button {
   .obsidian-button:hover::after {
     opacity: 1;
   }
-  
-  .bottomright{
-  display: none !important;
-  }
-  .bottomleft {
-    position: absolute;
-    bottom: 1.2em;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 0.7em;
-    display: block;
-    margin: 0 auto;
-    margin-top: 2em;
-  }
+
+  .bottomright {
+  position: fixed;
+  bottom: 8px;
+  right: 16px;
+  font-size: 2vw;
+  z-index: 999; /* Ensure it's above other content */
+}
+
+.bottomleft {
+  position: fixed;
+  bottom: 8px;
+  left: 16px;
+  font-size: 18px;
+  z-index: 999; /* Ensure it's above other content */
+}
 }
