--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   line-height: 1.58;
   letter-spacing: -.003em;
-  font-size: 60%; /* Adjust the font size to 60% of the original */
+  font-size: 110%; /* Adjust the font size to 60% of the original */
   padding: 70px;
   max-width: 50rem;
   margin-left: auto;
@@ -18,7 +18,7 @@ h1 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 3.6vw; /* Adjust the font size for h1 */
+  font-size: 3.4vw; /* Adjust the font size for h1 */
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -29,7 +29,7 @@ h2 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 3.18vw; /* Adjust the font size for h2 */
+  font-size: 3.0vw; /* Adjust the font size for h2 */
   line-height: 1.15;
   letter-spacing: -.02em;
   color: rgba(0, 0, 0, 0.8);
@@ -76,9 +76,9 @@ button {
   position: fixed;
   bottom: 8px;
   right: 16px;
-  font-size: 2vw;
+  font-size: 18px;
   z-index: 999; /* Ensure it's above other content */
-  border: 2px ; /* Add a border */
+  border: 2px solid rgba(255,255,255,0); /* Add a border */
   padding: 5px; /* Add padding to the box */
   background-color: white; /* Fill with white color */
   border-radius: 20px; /* Add rounded corners */
@@ -90,7 +90,7 @@ button {
   left: 16px;
   font-size: 18px;
   z-index: 999; /* Ensure it's above other content */
-  border: 2px; /* Add a border */
+  border: 2px solid rgba(255,255,255,0); /* Add a border */
   padding: 5px; /* Add padding to the box */
   background-color: white; /* Fill with white color */
   border-radius: 20px; /* Add rounded corners */
@@ -196,7 +196,7 @@ button {
   position: fixed;
   bottom: 8px;
   right: 16px;
-  font-size: 2vw;
+  font-size: 18px;
   z-index: 999; /* Ensure it's above other content */
 }
 
