--- a/zemepis/style.css
+++ b/zemepis/style.css
@@ -34,3 +34,15 @@ ul {
     height: 12px;
     border: 2px solid white;
 }
+
+.bottomright {
+    position: fixed;
+    bottom: 8px;
+    right: 16px;
+    font-size: 18px;
+    z-index: 999; /* Ensure it's above other content */
+    border: 2px solid rgba(255,255,255,0); /* Add a border */
+    padding: 5px; /* Add padding to the box */
+    background-color: white; /* Fill with white color */
+    border-radius: 20px; /* Add rounded corners */
+  }
