--- a/zemepis/style.css
+++ b/zemepis/style.css
@@ -46,3 +46,11 @@ ul {
     background-color: white; /* Fill with white color */
     border-radius: 20px; /* Add rounded corners */
   }
+
+  .bottomleft {
+    position: fixed;
+    bottom: 8px;
+    left: 16px;
+    font-size: 18px;
+    z-index: 999; /* Ensure it's above other content */
+  }
