--- a/zemepis/style.css
+++ b/zemepis/style.css
@@ -55,6 +55,7 @@ ul {
     left: 16px;
     font-size: 18px;
     z-index: 999; /* Ensure it's above other content */
+    display: none;
 }
 
 @media (max-width: 600px) {
@@ -69,3 +70,34 @@ ul {
         margin: 0;
     }
 }
+
+#configurator-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+  }
+  
+.close-button {
+position: absolute;
+top: 10px;
+right: 10px;
+color: white;
+font-size: 20px;
+}
+  
+#configurator-overlay form input {
+    cursor: pointer;
+  }
+  
+  #configurator-overlay form checkbox {
+    cursor: pointer;
+  }
+  
+  #configurator-overlay form button {
+    cursor: pointer;
+  }
+  
