--- a/zemepis/style.css
+++ b/zemepis/style.css
@@ -69,6 +69,9 @@ ul {
         position: static;
         margin: 0;
     }
+    .support-icon {
+        display: none!important;
+    }
 }
 
 #configurator-overlay {
